--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -268,11 +268,9 @@
 
   .single-post-meta {
     display: inline-flex;
-    align-items: center;
     justify-content: space-between;
     padding-top: 15px;
-    // margin-top: 30px;
-    // margin-bottom: 20px;
+    flex-direction: column;
     width: 100%;
     @include sm{
       flex-direction: column;
